2010-04-28 Thu  Jari Aalto  <jari.aalto@cante.net>

	* other/folding.el
	- Fix byte compile errors (Emacs 23.x, XEmacs 21.4).
	(top level): add `eval-and-compile'.
	(folding-install-keymaps): Change `mapcar' to `mapc'; no list is
	collected.
	(folding-event-posn): Add missing "%s" format to `error'.
	(folding-mode-add-find-file-hook): Call `folding-find-file-hook'.
	(folding-is-hooked): Rewrite to use new hooks.
	(folding-find-file-hook): New macro
	(folding-write-file-hook): New macro.
	(folding-install-hooks): use `folding-write-file-hook'.
	(folding-font-lock-support-instantiate): simplify
	`global-font-lock-mode' check.
	(folding-font-lock-keywords): hide unused `ignore' variable
	from byte compiler.

2010-04-16 Fri  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyperl.el (tinyperl-:lint-arguments): New.
	(tinyperl-lint-perl-critic): Use `tinyperl-:lint-arguments'.

2010-04-15 Thu  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyperl.el
	(top level): New feature. There is menu entry to Lint the Perl
	code in buffer using module Perl::Critic; which needs to be installed
	separately.
	(tinyperl-lint-perl-critic): New.
	(tinyperl-:lint-buffer-name): New.
	(tinyperl-:lint-default-file-name): New.
	(tinyperl-:lint-severity): New.
	(tinyperl-:lint-hook): New.

	* tiny/tinycompile.el
	(tinycompile-parse-line-goto-guess): New.
	(tinycompile-parse-line-goto-basic): Rename. Was
	`tinycompile-parse-line-goto'.
	(tinycompile-parse-line-goto-main): New.
	(tinycompile-parse-line-goto-basic): Add check to `current-local-map'.

	* tiny/tinyliba.el (ti::buffer-parse-line-col): New.

	* tiny/tinylib.el (ti::buffer-parse-line-col): New.

2010-04-13 Tue  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyadvice.el: (DOC::Install): Improve documentation.
	(top level): remove all folding.el marks.

	* tiny/tinydebian.el (tinydebian-mail-mode-debian-address-ask-bug):
	Prefer taking bug number from current line before looking at mail
	headers.